chore: initial public release v2.0.1

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "@mumin/core",
-  "version": "1.0.0",
+  "name": "@mumin-api/core",
+  "version": "2.0.1",
   "description": "Official SDK for Mumin Hadith API",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "files": [
     "dist"
