--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mumin-api-monorepo",
-  "version": "1.0.0",
-  "private": true,
+  "version": "2.0.1",
+  "private": false,
   "workspaces": [
     "packages/*",
     "examples/*"
