--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "@mumin/vue",
-  "version": "1.0.0",
+  "name": "@mumin-api/vue",
+  "version": "2.0.1",
   "description": "Vue 3 composables for Mumin Hadith API",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "files": [
     "dist"
@@ -24,13 +27,10 @@
   "peerDependencies": {
     "vue": "^3.0.0"
   },
-  "dependencies": {
-    "@mumin/core": "*"
-  },
   "devDependencies": {
-    "vue": "^3.4.0",
-    "typescript": "^5.3.3",
     "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "vue": "^3.4.0",
     "vue-tsc": "^1.8.27"
   }
 }
