--- a/.github/workflows/publish-kotlin.yml
+++ b/.github/workflows/publish-kotlin.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Publish to Maven Central
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: :packages:kotlin:publishAllPublicationsToOSSRHRepository
+          build-root-directory: packages/kotlin
+          arguments: publishAllPublicationsToOSSRHRepository
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
