--- a/.github/workflows/publish-kotlin.yml
+++ b/.github/workflows/publish-kotlin.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: "17"
-          distribution: "adm"
+          distribution: "temurin"
 
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
