--- a/.github/workflows/publish-kotlin.yml
+++ b/.github/workflows/publish-kotlin.yml
@@ -21,9 +21,16 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           build-root-directory: packages/kotlin
-          arguments: publishAllPublicationsToCentralPortal
+          arguments: >
+            publishAllPublicationsToMavenCentralRepository
+            -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
+            -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
+            -Psigning.keyId=${{ secrets.GPG_KEY_ID }}
+            -Psigning.password=${{ secrets.GPG_SIGNING_PASSWORD }}
+            -Psigning.secretKey=${{ secrets.GPG_SIGNING_KEY }}
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
           GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
+          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
