--- a/packages/kotlin/gradle.properties
+++ b/packages/kotlin/gradle.properties
@@ -1,2 +1,7 @@
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.applyDefaultHierarchyTemplate=false
+mavenCentralUsername=${MAVEN_USERNAME}
+mavenCentralPassword=${MAVEN_PASSWORD}
+signing.keyId=${GPG_KEY_ID}
+signing.password=${GPG_SIGNING_PASSWORD}
+signing.secretKeyRingFile=${GPG_SECRET_KEY_PATH}
