--- a/.github/workflows/publish-kotlin.yml
+++ b/.github/workflows/publish-kotlin.yml
@@ -21,16 +21,10 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           build-root-directory: packages/kotlin
-          arguments: >
-            publishAllPublicationsToMavenCentralRepository
-            -PmavenCentralUsername=${{ secrets.MAVEN_USERNAME }}
-            -PmavenCentralPassword=${{ secrets.MAVEN_PASSWORD }}
-            -Psigning.keyId=${{ secrets.GPG_KEY_ID }}
-            -Psigning.password=${{ secrets.GPG_SIGNING_PASSWORD }}
-            -Psigning.secretKey=${{ secrets.GPG_SIGNING_KEY }}
+          arguments: publishAllPublicationsToMavenCentralRepository
         env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
-          GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
-          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
+          ORG_GRADLE_PROJECT_signing.keyId: ${{ secrets.GPG_KEY_ID }}
+          ORG_GRADLE_PROJECT_signing.password: ${{ secrets.GPG_SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_signing.secretKey: ${{ secrets.GPG_SIGNING_KEY }}
